--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: go
 go:
   - "1.14.7"
+services:
+  - postgresql
+before_script:
+  - psql -c 'create database bakulan;' -U postgres
 script:
   - scripts/cibuild
 sudo: false
