remove .env file

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,12 @@ go:
   - "1.14.7"
 services:
   - postgresql
+env:
+  - BAKULAN_DB_USER=postgres
+  - BAKULAN_DB_PASSWORD=postgres
+  - BAKULAN_DB_HOST=localhost
+  - BAKULAN_DB_NAME=bakulan
+  - BAKULAN_DB_PORT=5432
 before_script:
   - psql -c 'create database bakulan;' -U postgres
 script:
